--- a/hosted/index.html
+++ b/hosted/index.html
@@ -38,8 +38,9 @@
         <div id="stickyNote3">
         </div>
         <h2 id="textFieldH2">Text Field</h2>
-        <div id="textField">
-        </div>
+        <!--CANNOT PUT WHITESPACE IN BETWEEN OPENING AND CLOSING TAG OR THIS WILL NOT WORK
+        PROPERLY-->
+        <textarea id="textField" rows="1" cols="20" autocomplete="off"></textarea>
       </div> 
     </div>
     <canvas id="canvas">Please use an HTML 5 browser</canvas>
