--- a/hosted/index.html
+++ b/hosted/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Prototype</title>
     <meta charset="utf-8"/>
+    <script src="/socket.io/socket.io.js"></script>
     <link rel='stylesheet' type="text/css" href='/assets/bootstrap/css/bootstrap.min.css' />
     <link rel='stylesheet' type="text/css" href='/assets/styles.css' />
 	<script src="/assets/compiled.js"> </script>
