Limit usernames to 15 char; Add popup for user feedback

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -16,6 +16,9 @@
   <div class="row">
   <div class="col-lg-6">
     <div class="input-group" id="inputUser">
+      <div class="popup">
+        <span class="popuptext" id="namePopup">Usernames must not be longer than 15 characters!</span>
+      </div>
       <input type="text" id="username" class="form-control" placeholder="Username...">
       <span class="input-group-btn">
         <button class="btn btn-default" id="connect" type="button">Connect!</button>
