--- a/hosted/index.html
+++ b/hosted/index.html
@@ -116,7 +116,15 @@
         <!--CANNOT PUT WHITESPACE IN BETWEEN OPENING AND CLOSING TAG OR THIS WILL NOT WORK
         PROPERLY-->
         <textarea id="textField" rows="1" cols="20" autocomplete="off"></textarea>
-      </div> 
+      </div>
+       <div id="tempTextField">
+        <div class="input-group" id="inputNote">
+         <textarea class="form-control" rows="5" placeholder="add text" id="comment"></textarea>
+          <span class="input-group-btn">
+          <button class="btn btn-default" type="button" id="submitNote">OK!</button> 
+          </span>
+        </div><!-- /input-group -->
+    </div>
     </div>
     <canvas id="canvas">Please use an HTML 5 browser</canvas>
   </div>
