--- a/hosted/index.html
+++ b/hosted/index.html
@@ -121,10 +121,27 @@
         <div class="input-group" id="inputNote">
          <textarea class="form-control" rows="5" placeholder="add text" id="comment"></textarea>
           <span class="input-group-btn">
-          <button class="btn btn-default" type="button" id="submitNote">OK!</button> 
+          <button class="btn btn-default" type="button" id="submitNote">OK!</button>
+            <span class="glyphicon glyphicon-trash" aria-hidden="true" id="deleteNote"></span>
           </span>
         </div><!-- /input-group -->
     </div>
+       <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" id="dropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Change Color <span class="caret"></span></button>
+        <ul class="dropdown-menu" id="colorDrop">
+          <li><a href="#" data-value="#4ECDC4" style="background-color:#4ECDC4"></a></li>
+          <li><a href="#" data-value="#FF6B6B" style="background-color:#FF6B6B"></a></li>
+          <li><a href="#" data-value="#f2f2f2" style="background-color:#f2f2f2"></a></li>
+          <li><a href="#" data-value="#313638" style="background-color:#313638"></a></li>
+          <li><a href="#" data-value="#FFE66D" style="background-color:#FFE66D"></a></li>
+          <li><a href="#" data-value="#AA80FF" style="background-color:#AA80FF"></a></li>
+          <li><a href="#" data-value="#800000" style="background-color:#800000"></a></li>
+          <li><a href="#" data-value="#ADEBAD" style="background-color:#ADEBAD"></a></li>
+          <li><a href="#" data-value="#FFCC66" style="background-color:#FFCC66"></a></li>
+        </ul>
+          </div><!-- /btn-group -->
+    <div id="fakeTextField">
+      </div>
     </div>
     <canvas id="canvas">Please use an HTML 5 browser</canvas>
   </div>
