Add text color functionality to notes and textfields

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -114,6 +114,25 @@
         </div>
         <div id="stickyNote3">
         </div>
+        <h2 id="textH2">Text Color</h2>
+        <div class="textColor" id="textColor1" data-value="#4ECDC4" style="background-color:#4ECDC4">
+        </div>
+        <div class="textColor" id="textColor2" data-value="#FF6B6B" style="background-color:#FF6B6B">
+        </div>
+        <div class="textColor" id="textColor3" data-value="#f2f2f2" style="background-color:#f2f2f2">
+        </div>
+        <div class="textColor" id="textColor4" data-value="#313638" style="background-color:#313638">
+        </div>
+        <div class="textColor" id="textColor5" data-value="#FFCC66" style="background-color:#FFCC66">
+        </div>
+        <div class="textColor" id="textColor6" data-value="#FFE66D" style="background-color:#FFE66D">
+        </div>
+        <div class="textColor" id="textColor7" data-value="#AA80FF" style="background-color:#AA80FF">
+        </div>
+        <div class="textColor" id="textColor8" data-value="#800000" style="background-color:#800000">
+        </div>
+        <div class="textColor" id="textColor9" data-value="#ADEBAD" style="background-color:#ADEBAD">
+        </div>
         <button id="textField">Add Text Field</button>
         <!--CANNOT PUT WHITESPACE IN BETWEEN OPENING AND CLOSING TAG OR THIS WILL NOT WORK
         PROPERLY-->
