Add instructions for exiting note/textfield placement and \making connections

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -134,9 +134,12 @@
         <div class="textColor" id="textColor9" data-value="#ADEBAD" style="background-color:#ADEBAD">
         </div>
         <button id="textField">Add Text Field</button>
+        <p class="instruct">Press "Q" to stop placing a note or text field</p>
         <div id="makeConnection">
           <img src="/assets/Arrow-icon.png">
           <h2 id="arrowH2">Make a Connection</h2>
+          <p class="instruct" id="connectInstruct">Click on one note and then another to create a
+          line between them</p>
         </div>
         <!--CANNOT PUT WHITESPACE IN BETWEEN OPENING AND CLOSING TAG OR THIS WILL NOT WORK
         PROPERLY-->
