Finally came up with an app title

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="login">
-  <h1 id="indexh1">Time to brainstorm!</h1>
+  <h1 id="indexh1">Cloud Brain</h1>
   <div class="row">
   <div class="col-lg-6">
     <div class="input-group" id="inputUser">
