simple animation when other user interact with the sidebar

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -136,7 +136,7 @@
         <button id="textField">Add Text Field</button>
         <p class="instruct">Press "Q" to stop placing a note or text field</p>
         <div id="makeConnection">
-          <img src="/assets/Arrow-icon.png">
+          <img src="/assets/Arrow-icon.png" id="img">
           <h2 id="arrowH2">Make a Connection</h2>
           <p class="instruct" id="connectInstruct">Click on one note and then another to create a
           line between them</p>
